# Cell-Pick-and-Place

./: Plugin_Check.py  Read_sensor.py  commands  custom_record.py  pyproject.toml  python  run_record.py
archive/: camera_checker.py  hand_guidance.py  main_safe.py
archive/old_hand_guidance/: main.py
hand_guidance/: hand_guidance.py  main_risky.py  main_safe.py  task.py
lerobot_robot_meca500/: pyproject.toml
lerobot_robot_meca500/lerobot_robot_meca500/: __init__.py  config_meca500.py  config_meca500_custom.py  meca500_custom.py  robot_meca500.py
lerobot_robot_meca500/lerobot_robot_meca500.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lerobot_teleoperator_hand_guidance/: pyproject.toml
lerobot_teleoperator_hand_guidance/lerobot_teleoperator_hand_guidance/: __init__.py  config_hand_guidance.py  config_hand_guidance_custom.py  hand_guidance_custom.py  teleop_hand_guidance.py
lerobot_teleoperator_hand_guidance/lerobot_teleoperator_hand_guidance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
meca500_demos-master/: .gitignore  LICENSE  README.md  requirements.txt
meca500_demos-master/gui/: main.py  plotter.py
meca500_demos-master/tasks/: alignment.py  button_testing.py  contour_following.py  deflashing.py  hand_guidance.py  part_polishing.py  polishing.py
meca500_demos-master/utils/: write_sensor_config.py
meca500_monitor/: my_monitor.py
my_hand_guidance/: hand_guidance.py  main.py
old_hand_guidance/: requirements.txt
printed_targets/: Dot.docx
robot_test/: test_template.py
(+24 files in other folders)
