[project]
name = "cell_pick_and_place"
version = "0.1.0"
description = "A project for controlling a robotic arm to perform cell pick-and-place tasks."
authors = [
    {name = "Adam Axelrod", email = "adambaxelrod@gmail.com"}
]
dependencies = [
    "mecademicpy>=1.4.0",
    "numpy>=1.26.0",
    "bota_driver",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"