[project]
name = "lerobot-robot-meca500"
version = "0.0.1"
dependencies = [
    "lerobot",
    "mecademicpy",
    "bota_driver"
]

[project.entry-points."lerobot.robots"]
meca500_custom = "lerobot_robot_meca500:Meca500Custom"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"